# src/swagger.json
@@ -149,6 +149,39 @@
           }
         }
       }
+    },
+    "/professionals/list": {
+      "get": {
+        "tags": [
+          "Attendants"
+        ],
+        "summary": "List all professionals",
+        "description": "List all rofessional",
+        "security":[
+          {"bearerAuth": []}
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string"
+                    },
+                    "fone": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "definitions":{
